--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ repository               : "carlschuler/carl.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : "Carl Schuler"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
   location         : "Earth"
