--- a/_config.yml
+++ b/_config.yml
@@ -25,11 +25,11 @@ author:
   avatar           : "profile.png"
   name             : "Carl Schuler"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "Vineyard Square and Town of Chapel Hill
   location         : "Earth"
   employer         : "Red Brick University"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "vineyardsquare@carlschuler.info" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
