--- a/_config.yml
+++ b/_config.yml
@@ -212,17 +212,17 @@ kramdown:
 
 
 # These settings control the types of collections used by the template
-collections:
+#collections:
   teaching:
     output: true
     permalink: /:collection/:path/
-  publications:
+  #publications:
     output: true
     permalink: /:collection/:path/
-  portfolio:
+ # portfolio:
     output: true
     permalink: /:collection/:path/
-  talks:
+  #talks:
     output: true
     permalink: /:collection/:path/
 
